# PyFITS

./: .authors  .coveragerc  .gitignore  .travis.yml  CHANGES.txt  FAQ.txt  LICENSE.txt  MANIFEST.in  README.txt  TEST_COMMIT  defsetup.py  dist.py  pyfits_setuphook.py  setup.cfg  setup.py  setup_hooks.py  tox-win.ini  tox.ini
NA_test/: pyfits_test.py  test0.fits  test_card.py
NP_test/: pyfits_test.py  table_test.py  test_buffer.py  test_cardlist.py  test_file.py
astropy/io/fits/: __init__.py  _release.py  card.py  column.py  convenience.py  core.py  diff.py  file.py  fitsrec.py  header.py  py3compat.py  util.py  verify.py
astropy/io/fits/hdu/: __init__.py  base.py  compressed.py  groups.py  hdulist.py  image.py  nonstandard.py  table.py
astropy/io/fits/scripts/: fitsdiff.py
astropy/io/fits/src/: compressionmodule.c
astropy/io/fits/tests/: __init__.py  test_checksum.py  test_core.py  test_diff.py  test_division.py  test_groups.py  test_hdulist.py  test_header.py  test_image.py  test_nonstandard.py  test_structured.py  test_table.py  test_uint.py  test_util.py  util.py
cextern/: README
cextern/cfitsio/: Makefile.in  README.win32  cfitsio.doc  cfitsio.pc.in  cfitsio.ps  cfitsio.tex  fitsio.doc  fitsio.ps  fitsio.tex  fpackutil.c  testf77.out  testprog.out
docs/: Makefile  PyFITS.ps  PyFITS.tex  PyFITS_doc.ps  PyFITS_documents.ps  STScI_logo_trim.epsi  Users_Manual.backup.book  Users_Manual.book  Users_ManualIX.backup.fm  Users_ManualIX.fm  Users_ManualTOC.backup.fm  Users_ManualTOC.fm  Users_Manual_New.lyx  adassconf.sty  ch1_intro.backup.fm  ch1_intro.fm  ch2_tutorial.backup.fm  ch2_tutorial.fm  ch3_header.backup.fm  ch3_header.fm  ch4_image.backup.fm  ch4_image.fm  ch5_table.backup.fm  ch5_table.fm  ch6_verify.backup.fm  ch6_verify.fm  ch7_less_familiar.backup.fm  ch7_less_familiar.fm  ch8_reference.backup.fm  ch8_reference.fm  cover_draft.fm  make.bat  pyfits_cover.backup.fm  pyfits_cover.fm  requirements.txt
docs/fits/: history.rst  index.rst
docs/fits/api_docs/: api_diff.rst
docs/fits/appendix/: history.rst
docs/fits/users_guide/: users_guide.rst  users_headers.rst  users_image.rst  users_misc.rst  users_table.rst  users_tutorial.rst  users_unfamiliar.rst
docs/io/fits/: index.rst
docs/io/fits/appendix/: faq.rst  history.rst
docs/io/fits/users_guide/: users_headers.rst  users_reference.rst  users_scripts.rst  users_verification.rst
docs/source/: api_cards.rst  api_docs.rst  api_files.rst  api_hdulists.rst  api_hdus.rst  api_headers.rst  api_images.rst  api_tables.rst  api_utility.rst  conf.py  index.rst
docs/source/_static/: pyfits.css
docs/source/api/: cards.rst  hdulists.rst  headers.rst  tables.rst  verification.rst
docs/source/api_docs/: api_cards.rst  api_diff.rst  api_docs.rst  api_files.rst  api_hdulists.rst  api_hdus.rst  api_headers.rst  api_images.rst  api_tables.rst  api_utility.rst  api_verification.rst
docs/source/appendix/: appendix.rst  changelog.rst  faq.rst  header_transition.rst
docs/source/developers_guide/: developers_guide.rst
docs/source/usage/: headers.rst  scripts.rst  table.rst  unfamiliar.rst  verification.rst
docs/source/users_guide/: users_guide.rst  users_headers.rst  users_image.rst  users_intro.rst  users_misc.rst  users_reference.rst  users_scripts.rst  users_table.rst  users_tutorial.rst  users_unfamiliar.rst  users_verification.rst
lib/: FITS.py  NA_pyfits.py  NP_pyfits.py  __init__.py  card.py  column.py  convenience.py  core.py  file.py  fits.py  fitsdiff.py  fitsrec.py  header.py  pyfits.py  readgeis.py  rec.py  util.py  verify.py
lib/hdu/: base.py  compressed.py  extension.py  groups.py  hdulist.py  image.py  streaming.py  table.py
lib/pyfits/: __init__.py  _release.py  card.py  column.py  convenience.py  core.py  diff.py  file.py  fitsrec.py  header.py  py3compat.py  py3kcompat.py  rec.py  release.py  util.py  verify.py
lib/pyfits/hdu/: __init__.py  base.py  compressed.py  extension.py  groups.py  hdulist.py  image.py  nonstandard.py  streaming.py  table.py
lib/pyfits/scripts/: fitscheck.py  fitsdiff.py
lib/pyfits/tests/: __init__.py  testCore.py  testPyfitsChecksum.py  testPyfitsHDUList.py  testPyfitsImage.py  testPyfitsTable.py  testStructured.py  testUint.py  test_checksum.py  test_core.py  test_diff.py  test_division.py  test_groups.py  test_hdulist.py  test_header.py  test_image.py  test_nonstandard.py  test_structured.py  test_table.py  test_uint.py  test_util.py  util.py
lib/tests/: __init__.py  cfitsio_verify.c  testCore.py  testPyfitsChecksum.py  testPyfitsDivision.py  testPyfitsHDUList.py  testPyfitsImage.py  testPyfitsTable.py  testStructured.py  testUint.py
pyfits/: __init__.py  _release.py  card.py  column.py  convenience.py  core.py  diff.py  file.py  fitsrec.py  header.py  py3compat.py  util.py  verify.py
pyfits/_compat/: __init__.py
pyfits/hdu/: __init__.py  base.py  compressed.py  groups.py  hdulist.py  image.py  streaming.py  table.py
pyfits/scripts/: __init__.py  fitscheck.py  fitsdiff.py  fitsheader.py  fitsinfo.py
pyfits/tests/: __init__.py  test_checksum.py  test_core.py  test_diff.py  test_division.py  test_groups.py  test_hdulist.py  test_header.py  test_image.py  test_nonstandard.py  test_table.py  test_uint.py  test_util.py  util.py
pyfits_py3kfixes/: fix_bytes.py  fix_bytesmod.py  fix_wrapstr.py
scripts/: fitscheck  fitsdiff  fitshead
src/: compress.c  compress.h  compressionmodule.c  fits_hcompress.c  fits_hdecompress.c  fitsio.c  fitsio.h  fitstypesmodule.c  pliocomp.c  pyfitsCompWrapper.c  quantize.c  recordmodule.c  recordmodule.h  ricecomp.c  zlib.c  zlib.h  zutil.h
test/: pyfits_test.py  scale.fits  stddata.fits  table_test.py  test0.fits  testCore.py  testPyfitsChecksum.py  testPyfitsHDUList.py  testPyfitsImage.py  testPyfitsTable.py  testStructured.py  test_card.py
utils/: fitsdiff.py  readgeis.py
