[metadata]
name = pyfits
version = 3.0.12.dev
author = J. C. Hsu, Paul Barrett, Christopher Hanley, James Taylor,
    Michael Droettboom, Erik M. Bray
author-email = help@stsci.edu
summary = Reads FITS images and tables into numpy arrays and manipulates FITS headers
description-file = 
    README.txt
    CHANGES.txt
home-page = http://www.stsci.edu/resources/software_hardware/pyfits 
classifier =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules
requires-python = >=2.5
requires-dist =
    setuptools
    numpy

# TODO: Add support for custom build_ext command that warns when extension
# modules fail to build, rather than errors out.  This might be useful enough
# to include in stsci.distutils.

[files]
packages_root = lib
packages =
    pyfits
    pyfits.hdu
    pyfits.tests
package_data =
    pyfits.tests = data/*.fits
scripts = scripts/fitscheck

[extension=pyfits.compression]
sources = 
    src/compress.c
    src/fits_hcompress.c
    src/fits_hdecompress.c
    src/fitsio.c
    src/pliocomp.c
    src/compressionmodule.c
    src/quantize.c
    src/ricecomp.c
    src/zlib.c
    src/inffast.c
    src/inftrees.c
    src/trees.c
include_dirs = numpy
# Squelch a handful of warnings (which actually cause pip to break in tox and
# other environments due to gcc outputting non-ASCII characters in some
# terminals; see python issue6135)
extra_compile_args =
    -Wno-unused-function
    -Wno-strict-prototypes

[build_ext]
pre-hook.numpy-extension-hook = stsci.distutils.hooks.numpy_extension_hook

[egg_info]
tag_svn_revision = False

[upload_docs]
upload-dir = docs/build/html

[zest.releaser]
hook_package_dir = lib
prereleaser.before = pyfits._release.releaser.prereleaser_before
prereleaser.middle = pyfits._release.releaser.prereleaser_middle
prereleaser.after = pyfits._release.releaser.prereleaser_after
releaser.after = pyfits._release.releaser.releaser_after
postreleaser.middle = pyfits._release.releaser.postreleaser_middle
postreleaser.after = pyfits._release.releaser.postreleaser_after
