[metadata]
name = pyfits
version = 3.1.3
author = J. C. Hsu, Paul Barrett, Christopher Hanley, James Taylor,
    Michael Droettboom, Erik M. Bray
author-email = help@stsci.edu
summary = Reads FITS images and tables into numpy arrays and manipulates FITS headers
description-file = 
    README.txt
    CHANGES.txt
home-page = http://www.stsci.edu/resources/software_hardware/pyfits
classifier = 
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules
requires-python = >=2.5
requires-dist = 
    numpy


[files]
packages_root = lib
packages = 
    pyfits
    pyfits.hdu
    pyfits.scripts
    pyfits.tests
package_data = 
    pyfits.tests = data/*.fits
scripts = 
    scripts/fitscheck
    scripts/fitsdiff


[extension=pyfits.compression]
sources = 
    src/compress.c
    src/fits_hcompress.c
    src/fits_hdecompress.c
    src/fitsio.c
    src/pliocomp.c
    src/compressionmodule.c
    src/quantize.c
    src/ricecomp.c
    src/zlib.c
    src/inffast.c
    src/inftrees.c
    src/trees.c
include_dirs = numpy
extra_compile_args = 
    -Wno-unused-function
    -Wno-strict-prototypes
optional = True
fail_message = 
    !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
    Failed to build PyFITS tile compression support.  PyFITS will still
    function, but without the ability to read or write compressed images.
    Please seek support from help@stsci.edu if you need this capability.
    !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!


[global]
setup-hooks = 
    stsci.distutils.hooks.tag_svn_revision
    stsci.distutils.hooks.version_setup_hook
commands = stsci.distutils.command.build_optional_ext.build_optional_ext


[entry_points]
console_scripts =
    fitsdiff = pyfits.scripts.fitsdiff:main
    fitscheck = pyfits.scripts.fitscheck:main


[build_ext]
pre-hook.numpy-extension-hook = stsci.distutils.hooks.numpy_extension_hook


[upload_docs]
upload-dir = docs/build/html


[zest.releaser]
hook_package_dir = lib
prereleaser.before = pyfits._release.releaser.prereleaser_before
prereleaser.middle = pyfits._release.releaser.prereleaser_middle
prereleaser.after = pyfits._release.releaser.prereleaser_after
releaser.middle = pyfits._release.releaser.releaser_middle
releaser.after = pyfits._release.releaser.releaser_after
postreleaser.middle = pyfits._release.releaser.postreleaser_middle
postreleaser.after = pyfits._release.releaser.postreleaser_after
