[metadata]
name = pyfits
version = 3.3.dev
author = J. C. Hsu, Paul Barrett, Christopher Hanley, James Taylor,
    Michael Droettboom, Erik M. Bray
author-email = help@stsci.edu
summary = Reads FITS images and tables into numpy arrays and manipulates FITS headers
description-file = 
    README.txt
    CHANGES.txt
home-page = http://www.stsci.edu/resources/software_hardware/pyfits
classifier = 
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules
requires-python = >=2.5
requires-dist = 
    numpy


[files]
packages_root = lib
packages = 
    pyfits
    pyfits.hdu
    pyfits.scripts
    pyfits.tests
package_data = 
    pyfits.tests = data/*.fits
scripts = 
    scripts/fitscheck
    scripts/fitsdiff


[extension=pyfits.compression]
sources = 
# Comment out or remove all of the cextern/cfitsio/* files when building with
# the system CFITSIO
    cextern/cfitsio/adler32.c
    cextern/cfitsio/buffers.c
    cextern/cfitsio/cfileio.c
    cextern/cfitsio/checksum.c
    cextern/cfitsio/crc32.c
    cextern/cfitsio/deflate.c
    cextern/cfitsio/drvrfile.c
    cextern/cfitsio/drvrgsiftp.c
    cextern/cfitsio/drvrmem.c
    cextern/cfitsio/drvrnet.c
    cextern/cfitsio/drvrsmem.c
    cextern/cfitsio/editcol.c
    cextern/cfitsio/edithdu.c
    cextern/cfitsio/eval_f.c
    cextern/cfitsio/eval_l.c
    cextern/cfitsio/eval_y.c
    cextern/cfitsio/fitscore.c
    cextern/cfitsio/fits_hcompress.c
    cextern/cfitsio/fits_hdecompress.c
    cextern/cfitsio/getcolb.c
    cextern/cfitsio/getcol.c
    cextern/cfitsio/getcold.c
    cextern/cfitsio/getcole.c
    cextern/cfitsio/getcoli.c
    cextern/cfitsio/getcolj.c
    cextern/cfitsio/getcolk.c
    cextern/cfitsio/getcoll.c
    cextern/cfitsio/getcolsb.c
    cextern/cfitsio/getcols.c
    cextern/cfitsio/getcolui.c
    cextern/cfitsio/getcoluj.c
    cextern/cfitsio/getcoluk.c
    cextern/cfitsio/getkey.c
    cextern/cfitsio/group.c
    cextern/cfitsio/grparser.c
    cextern/cfitsio/histo.c
    cextern/cfitsio/imcompress.c
    cextern/cfitsio/infback.c
    cextern/cfitsio/inffast.c
    cextern/cfitsio/inflate.c
    cextern/cfitsio/inftrees.c
    cextern/cfitsio/iraffits.c
    cextern/cfitsio/modkey.c
    cextern/cfitsio/pliocomp.c
    cextern/cfitsio/putcolb.c
    cextern/cfitsio/putcol.c
    cextern/cfitsio/putcold.c
    cextern/cfitsio/putcole.c
    cextern/cfitsio/putcoli.c
    cextern/cfitsio/putcolj.c
    cextern/cfitsio/putcolk.c
    cextern/cfitsio/putcoll.c
    cextern/cfitsio/putcolsb.c
    cextern/cfitsio/putcols.c
    cextern/cfitsio/putcolu.c
    cextern/cfitsio/putcolui.c
    cextern/cfitsio/putcoluj.c
    cextern/cfitsio/putcoluk.c
    cextern/cfitsio/putkey.c
    cextern/cfitsio/quantize.c
    cextern/cfitsio/region.c
    cextern/cfitsio/ricecomp.c
    cextern/cfitsio/scalnull.c
    cextern/cfitsio/swapproc.c
    cextern/cfitsio/trees.c
    cextern/cfitsio/uncompr.c
    cextern/cfitsio/wcssub.c
    cextern/cfitsio/wcsutil.c
    cextern/cfitsio/zcompress.c
    cextern/cfitsio/zuncompress.c
    cextern/cfitsio/zutil.c
    src/compressionmodule.c
include_dirs = 
    numpy
# Comment out or remove the following line when building witht he system
# CFITSIO
    cextern/cfitsio
extra_compile_args = 
    -Wno-unused-variable
    -Wno-parentheses
    -Wno-uninitialized
    -Wno-format
    -Wno-strict-prototypes
    -Wno-unused
    -Wno-comments
    -Wno-switch
# Uncomment this line when building with the system CFITSIO
#libraries = cfitsio
optional = True
fail_message = 
    !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
    Failed to build PyFITS tile compression support.  PyFITS will still
    function, but without the ability to read or write compressed images.
    Please seek support from help@stsci.edu if you need this capability.
    !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!


[global]
setup-hooks = 
#    stsci.distutils.hooks.tag_svn_revision
    stsci.distutils.hooks.version_setup_hook
commands = stsci.distutils.command.build_optional_ext.build_optional_ext


[entry_points]
console_scripts =
    fitsdiff = pyfits.scripts.fitsdiff:main
    fitscheck = pyfits.scripts.fitscheck:main


[build_ext]
pre-hook.numpy-extension-hook = stsci.distutils.hooks.numpy_extension_hook


[upload_docs]
upload-dir = docs/build/html


[zest.releaser]
hook_package_dir = lib
prereleaser.before = pyfits._release.releaser.prereleaser_before
prereleaser.middle = pyfits._release.releaser.prereleaser_middle
prereleaser.after = pyfits._release.releaser.prereleaser_after
releaser.middle = pyfits._release.releaser.releaser_middle
releaser.after = pyfits._release.releaser.releaser_after
postreleaser.middle = pyfits._release.releaser.postreleaser_middle
postreleaser.after = pyfits._release.releaser.postreleaser_after
